manifests/dripcloud/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dripcloud-gateway
spec:
  gatewayClassName: eg
  listeners:
  - name: java-tcp
    protocol: TCP
    port: 25565
    allowedRoutes:
      kinds: [{kind: TCPRoute}]
  - name: bedrock-udp
    protocol: UDP
    port: 19132
    allowedRoutes:
      kinds: [{kind: UDPRoute}]
  - name: bluemap-http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds: [{kind: HTTPRoute}]
